# vit_PQC

./: .gitignore  LWE_ViT_report_download.docx  README.md  pyproject.toml
CNN+TRANS/: data.py  make_embedding_tsne_common.py  metrics.py  models.py  requirements.txt  restyle_embedding_tsne_figures.py
docs/: lwe_vit_experiment_state.md
document/: LWE_Image_Embedding_Implementation_Flow_Report.docx  LWE_toy_full_recovery_detailed_report.docx  RHIE-CG_LWE_Report_Reformatted.docx  idea.md  idea2.docx  idea3.docx  lwe_18channel_implementation_evaluation_plan.md  per_coordinate_embedding_centroid_method_report.docx  warning.md
final/: dataset.py  dump_images.py  model.py  toy_vit.py  train.py  visualize_lwe.py
idea/: grokking_breaker.py  rgb_binary_baseline.py  toy_vit.py
idea1/: README.md  requirements.txt
idea2/: README.md  ablation.py  analyze_binary.py  binary_sanity_suite.py  candidate.py  configs.py  data.py  distinguisher.py  evaluate.py  generate_run_artifacts.py  logger.py  losses.py  metrics.py  modular.py  plot_results.py  sanity_checks.py  train_common.py  train_integer.py  train_ternary.py  visualization.py  visualize_embedding.py
idea3/: README.md  candidate.py  configs.py  data.py  losses.py  metrics.py  modular.py  pair_residual.py  plot_results.py  recovery.py  train_binary.py  train_common.py  utils.py
idea4/: dataset.py  dump_images.py  model.py  secret_splits.py  toy_vit.py  train.py  train_pair_residual_colvit.py  train_residual_colvit.py  visualize_lwe.py
lwe_image_experiment/: checks.py  train.py
scripts/: plot_lwe_history.py  (+2 more)
(+172 files in other folders)
